--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "test": "jest"
   },
   "devDependencies": {
+    "eslint": "^6.8.0",
+    "eslint-plugin-jest": "^23.7.0",
     "jest": "^24.9.0"
   }
 }
